feat: Add buttons to navigate for both pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,5 +10,16 @@
     <h1>
         Home Page
     </h1>
+
+    <button id="nextButton" onclick="goNextPage()">
+        Next⏩
+    </button>
+
+    <script>
+        function goNextPage(){
+            window.location.href = "/second"
+        }
+    </script>
+
 </body>
 </html>
