--- a/templates/second.html
+++ b/templates/second.html
@@ -10,5 +10,13 @@
     <h1>
         This is Second Page
     </h1>
+
+    <button id="previousButton" onclick="goPreviousPage()">⏪Previous</button>
+
+    <script>
+        function goPreviousPage(){
+            window.location.href = "/";
+        }
+    </script>
 </body>
 </html>
