feat: Initialize socket-io

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
     <title>Home</title>
 </head>
 <body>
@@ -11,14 +12,23 @@
         Home Page
     </h1>
 
-    <button id="nextButton" onclick="goNextPage()">
-        Next⏩
-    </button>
+    <button id="nextButton" onclick="goNextPage()">Next⏩</button>
 
     <script>
         function goNextPage(){
             window.location.href = "/second"
         }
+    </script>
+
+    <script type="text/javascript" charset="utf-8">
+        var socket = io();
+        var pageTitle = document.title;
+
+        socket.on('connect', function() {
+            console.log('Page ' + pageTitle + ' is connected')
+            socket.emit('server_connect', {data: pageTitle + ' is online now\n'})
+        });
+
     </script>
 
 </body>
